app/styles/partials/ucsd/base/_styling.scss
/**********************************************************************
 * Basic CSS styling
 */

.clearfix{
	overflow: auto;
}

/* --------------------------------------------------------------------
 * table
 */
table.styled {
	margin-bottom: 1em;
}

table.styled th,table.styled td {
	padding: .25em 1em;
}

table.styled th {
	background-color: #eee;
	font-weight: bold;
}

table.styled th,table.styled td {
	border: 1px solid #ccc;
}

table.styled tbody tr.even {
	background-color: #eff;
}

table > caption {
	font-weight: bold;
}

table {
	max-width: 100%;
}

/* --------------------------------------------------------------------
 * _images
 */
img.left {
	float: left;
	padding: 0 1em 1em 0;
	width: auto;
}

img.right {
	float: right;
	padding: 0 0 1em 1em;
	width: auto;
}

/* --------------------------------------------------------------------
 * * - 360px
 */
@media only screen and (max-width: 360px) {
	img.left,
	img.right {
		float: none;
		padding: 1em 0;
	}
}/**********************************************************************
 * Messages
 */

.msg {
	padding: 2em 3em;
    margin-bottom: 20px;
    border-radius: 4px;
}

.msg {

	h4{
	padding-left: 20px;
	text-shadow: none;
	font-weight: bold;
	}

	h2{
	padding-left: 35px;
	text-shadow: none;
	font-weight: bold;
	}
}

.msg.info {
	/*border: 1px solid #dedad1;*/
	background-color: #F5F0E6;
}

.msg.info {

	h4 {
		background: url(../img/info.svg) no-repeat transparent;
		background-position: 0 -150px;
		background-size: 15px 15px;
		background-position: 0px 5px !important;
	}

	h2 {
		background: url(../img/info.svg) no-repeat transparent;
		font-weight: bold;
		background-size: 25px 25px;
		background-position: 0px 8px !important;
		margin: 0;
	}

}




.msg.alert {
	background-color: #ffcd00d6;
}

.msg.alert  {

	h4{
		background: url(../img/warning.svg) no-repeat transparent;
		background-position: 0 -249px;
		color: #333;
		font-weight: bold;
		background-size: 15px 15px;
		background-position: 0px 5px !important;
	}

	h2 {
		background: url(../img/warning.svg) no-repeat transparent;
		background-position: 0 -249px;
		color: #333;
		font-weight: bold;
		background-size: 25px 25px;
		background-position: 0px 8px !important;
		margin: 0;
	}
}

.sidebar-section > .msg.alert {
	
	h2 {
		padding-left:20px;
		font-size: 28px;
		background-size: 15px 15px;
		background-position: 0px 5px !important;
	}
}

.msg.confirm {
	border: 1px solid #393;
	background-color: #efe;
}

.msg.confirm h4 {
	color: #393;
	background-position: 0 -200px;
}

.msg.error {
	border: 1px solid #c00;
	background-color: #fee;
}

.msg.error h4 {
	color: #c00;
	background-position: 0 -299px;
}/**********************************************************************
 * Button
 */
.button {
	border: none;
	color: #333;
	display: inline-block;
	outline: none;
	cursor: pointer;
	text-align: center;
	text-decoration: none;
	text-shadow: rgba(255, 255, 255, .5) 0 1px 1px;
	margin-right: .5em;
	padding: .25em 1em;
	-moz-border-radius: .25em;
	-webkit-border-radius: .25em;
	border-radius: .25em;
	-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .5);
	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .5);
	box-shadow: 0 1px 2px rgba(0, 0, 0, .5);
}

.button:hover {
	text-decoration: none;
}

.button:active {
	position: relative;
	top: 1px;
}

.button:disabled {
	color: #999;
	cursor: default;
}

/*---------------------------------------------------------------------
 * primary button
 */
.primary {
	background: #fc0;
	background: -moz-linear-gradient(top, #fc0, #fa0);
	background: -webkit-gradient(linear, left top, left bottom, from(#fc0), to(#fa0) );
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffcc00',endColorstr='#ffaa00');
}

.primary:hover {
	background: #f90;
}

.primary:disabled {
	background: #fd0;
	background: -moz-linear-gradient(top, #fd0, #fc0);
	background: -webkit-gradient(linear, left top, left bottom, from(#fd0), to(#fc0) );
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffdd00',endColorstr='#ffcc00');
}

/*---------------------------------------------------------------------
 * secondary button
 */
.secondary {
	background: #eee;
	background: -moz-linear-gradient(top, #eee, #ddd);
	background: -webkit-gradient(linear, left top, left bottom, from(#eee), to(#ddd) );
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee',endColorstr='#dddddd');
}

.secondary:hover {
	background: #ccc;
}

.secondary:disabled {
	background: #fff;
	background: -moz-linear-gradient(top, #fff, #eee);
	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#eee) );
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff',endColorstr='#eeeeee');
}

/*---------------------------------------------------------------------
 * link button
 */
a.button {
	color: #333;
}

/* --------------------------------------------------------------------
 * * - 480px
 */
@media only screen and (max-width: 480px) {
	.button {
		padding: .5em 1em;
	}
}/**********************************************************************
 * Icon
 */
.icon {
	padding-left: 1.5em;
}

/* ie 7 only hack */
*:first-child+html .icon {
	display: inline-block;
}

.icon.newwin {
	background-position: 0 -50px;
}

.icon.info {
	background-position: 0 -150px;
}

.icon.confirm {
	background-position: 0 -200px;
}

.icon.alert {
	background-position: 0 -250px;
}

.icon.error {
	background-position: 0 -300px;
}

.icon.invalid {
	background-position: 0 -300px;
}

.icon.cal {
	background-position: 0 -350px;
}

.icon.check {
	background-position: 0 -400px;
}

.icon.check_disabled {
	background-position: 0 -450px;
}

.icon.close {
	background-position: 0 -500px;
}

.icon.close_disabled {
	background-position: 0 -550px;
}

.icon.disable {
	background-position: 0 -600px;
}

.icon.disable_disabled {
	background-position: 0 -650px;
}

.icon.doc {
	background-position: 0 -700px;
}

.icon.doc_disabled {
	background-position: 0 -750px;
}
/* ... */

